tests/fail/elaboration/mismatched-array-length/array16.fathom
//~ exit-code = 1

[34] : Array16 0 U32
